Inserir e atualizar registros by dialogData

--- a/src/app/pages/cliente/cliente.component.html
+++ b/src/app/pages/cliente/cliente.component.html
@@ -30,4 +30,4 @@
 </vistador-observador>
 <button (click)="salvar()">Salvar</button>
 
-<loader [isLoading]="this.isLoading"></loader>
+<!-- <loader [isLoading]="this.isLoading"></loader> -->
