feat():FInalizacao tela cliente

--- a/src/app/pages/cliente/vistador-observador-crud/vistador-observador-crud.component.html
+++ b/src/app/pages/cliente/vistador-observador-crud/vistador-observador-crud.component.html
@@ -1,5 +1,7 @@
 
-<H1> Cadastre um novo Vistador ou Observador</H1>
+<H1 *ngIf="!isEdit"> Cadastre um novo Vistador ou Observador</H1>
+<H1 *ngIf="isEdit"> Altere Vistador ou Observador</H1>
+
 <form  [formGroup]="form" (ngSubmit)="inserirRegistro()">
 
 
