--- a/src/app/pages/representantes/representantes.component.html
+++ b/src/app/pages/representantes/representantes.component.html
@@ -1,2 +1,2 @@
-<button (click)="paraporra()">START/STOP</button>
-<app-loader [isLoading]="this.isLoading" ></app-loader>
+<!-- <button (click)="paraporra()">START/STOP</button>
+<app-loader [isLoading]="this.isLoading" ></app-loader> -->
