--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -12,5 +12,12 @@
       <p>Representantes</p>
   </a>
 </li>
+
+<li  class="nav-item">
+  <a routerLink="scroll" class="nav-link">
+      <!-- <i class="material-icons" [class]="menu.icon">{{menu.icon}}</i> -->
+      <p>Scroll Dynmic</p>
+  </a>
+</li>
 </div>
 <router-outlet></router-outlet>
